# server/src/main/kotlin/com/diegoferreiracaetano/dlearn/orchestrator/SearchOrchestrator.kt
@@ -2,7 +2,7 @@ package com.diegoferreiracaetano.dlearn.orchestrator
 
 import com.diegoferreiracaetano.dlearn.domain.usecases.GetSearchDataUseCase
 import com.diegoferreiracaetano.dlearn.ui.screens.SearchScreenBuilder
-import com.diegoferreiracaetano.dlearn.ui.sdui.CardComponent
+import com.diegoferreiracaetano.dlearn.ui.sdui.MovieItemComponent
 import com.diegoferreiracaetano.dlearn.ui.sdui.Component
 import com.diegoferreiracaetano.dlearn.ui.sdui.Screen
 
@@ -10,8 +10,8 @@ class SearchOrchestrator(
     private val getSearchDataUseCase: GetSearchDataUseCase,
     private val searchScreenBuilder: SearchScreenBuilder
 ) {
-    fun searchShell(query: String, lang: String): Screen {
-        return searchScreenBuilder.buildShell(query, lang)
+    fun searchMain(lang: String): Screen {
+        return searchScreenBuilder.buildMain(lang)
     }
 
     suspend fun searchContent(
@@ -21,7 +21,7 @@ class SearchOrchestrator(
     ): Screen {
         val videos = getSearchDataUseCase.execute(query)
         val results = videos.map { video ->
-             CardComponent(
+             MovieItemComponent(
                 id = video.id,
                 title = video.title,
                 subtitle = video.subtitle,
